tests/baselines/reference/moduleResolutionWithoutExtension1.errors.txt
/src/bar.mts(2,21): error TS2835: Relative import paths need explicit file extensions in ECMAScript imports when '--moduleResolution' is 'node16' or 'nodenext'. Did you mean './foo.mjs'?
/src/bar.mts(3,21): error TS2834: Relative import paths need explicit file extensions in ECMAScript imports when '--moduleResolution' is 'node16' or 'nodenext'. Consider adding an extension to the import path.


==== /src/foo.mts (0 errors) ====
    export function foo() {
        return "";
    }
    
==== /src/bar.mts (2 errors) ====
    // Extensionless relative path ES import in an ES module
    import { foo } from "./foo"; // should error, suggest adding ".mjs"
                        ~~~~~~~
!!! error TS2835: Relative import paths need explicit file extensions in ECMAScript imports when '--moduleResolution' is 'node16' or 'nodenext'. Did you mean './foo.mjs'?
    import { baz } from "./baz"; // should error, ask for extension, no extension suggestion
                        ~~~~~~~
!!! error TS2834: Relative import paths need explicit file extensions in ECMAScript imports when '--moduleResolution' is 'node16' or 'nodenext'. Consider adding an extension to the import path.
    